--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,16 @@ services:
                         KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
                         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
                         KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+
+        postgres:
+                image: postgres:16
+                environment:
+                        POSTGRES_USER: postgres
+                        POSTGRES_PASSWORD: postgres
+                ports:
+                        - "5432:5432"
+                volumes:
+                        - test-volume:/var/lib/postgresql/data
+
+volumes:
+  test-volume:
